--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -92,3 +92,8 @@ jobs:
       run: terraform apply -auto-approve 
       env:  
         GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS}}
+    - name: Terraform Destroy
+      run: terraform destroy
+      env:  
+        GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS}}
+      
